--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-autopep8==1.5.4
 certifi==2020.6.20
 chardet==3.0.4
+charset-normalizer==2.0.7
 cloudinary==1.17.0
-dj-database-url==0.5.0
 Django==2.2.16
-django-cloudinary-storage==0.2.3
+django-ckeditor==6.1.0
+django-cloudinary-storage==0.3.0
+django-js-asset==1.2.2
+django-recaptcha==2.0.6
+djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==2.10
 mock==4.0.2
-Pillow==7.2.0
+Pillow==8.4.0
+psycopg2==2.9.1
 pycodestyle==2.6.0
 python-decouple==3.3
 pytz==2020.1
@@ -17,7 +22,3 @@ sqlparse==0.3.1
 toml==0.10.1
 urllib3==1.25.10
 whitenoise==5.2.0
-psycopg2
-gunicorn
-django-ckeditor
-djangorestframework
