--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ certifi==2020.6.20
 chardet==3.0.4
 charset-normalizer==2.0.7
 cloudinary==1.17.0
+dj-database-url==0.5.0
 Django==2.2.16
 django-ckeditor==6.1.0
 django-cloudinary-storage==0.3.0
+django-heroku==0.3.1
 django-js-asset==1.2.2
 django-recaptcha==2.0.6
 djangorestframework==3.12.4
